# Tetrika_junior

./: pyproject.toml  setup.cfg
task1/: solution.py
task2/: solution.py
task3/: solution.py
tests/: test_task1.py  test_task2.py  test_task3.py
